--- a/WebApiSecond/appsettings.json
+++ b/WebApiSecond/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "VodaDb": "Data Source=.\\FORLESSONS;Initial Catalog=VodaDB;User ID=qqadmin;Password=qqadmin1;TrustServerCertificate=True"
+  }
 }
